--- a/frontend-react/src/components/GuideItem/GuideItem.css
+++ b/frontend-react/src/components/GuideItem/GuideItem.css
@@ -1,7 +1,9 @@
 .guide-theme {
     font-family: sans-serif;
     display: flex;
+    align-items: start;
     gap: 20px;
+    width: 100%;
     list-style-type: none;
   }
   
@@ -15,20 +17,33 @@
     font-weight: 600;
     text-align: left;
   }
-  
+
   .guide-theme__content {
-    /* max-height: 0; */
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
     opacity: 0;
-    overflow: hidden;
     transition: max-height 0.4s ease, opacity 0.4s ease;
     font-size: 24px;
     color: #000;
     font-weight: 400;
   }
+  .guide-theme__content,
+  .react-markdown {
+    line-height: 1.5;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
+  }
 
   .guide-theme.open .guide-theme__content {
-    /* max-height: 2100px; */
     opacity: 1;
+  }
+
+  .guide-theme__icon-container {
+    position: relative;
+    width: 24px;
+    height: 24px;
   }
 
   .icon {
@@ -66,3 +81,5 @@
   .icon.open span:last-child {
     transform: rotate(-45deg);
   }
+
+  
