--- a/frontend-react/src/components/Slider/Slider.css
+++ b/frontend-react/src/components/Slider/Slider.css
@@ -2,11 +2,14 @@
     position: relative;
     overflow: hidden;
     height: 375px;
-    max-width: 33.3%;
+    max-width: 50%;
     flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
-  .slide__img {
+  /* .slide__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -22,7 +25,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 12px;
     color: white;
     font-weight: 600;
     text-transform: uppercase;
@@ -30,9 +32,10 @@
   
   .slide__date {
     align-self: flex-start;
+    font-size: 16px;
   }
   
   .slide__title {
     align-self: flex-start;
-  }
+  } */
   
