--- a/frontend-react/src/components/UI/ScrollToTop/ScrollToTop.css
+++ b/frontend-react/src/components/UI/ScrollToTop/ScrollToTop.css
@@ -1,7 +1,7 @@
 .scroll-to-top {
     position: fixed;
     bottom: 32px;
-    right: 32px;
+    left: 32px;
     width: 48px;
     height: 48px;
     border-radius: 50%;
