--- a/frontend-react/src/components/ChatModal/ChatModal.css
+++ b/frontend-react/src/components/ChatModal/ChatModal.css
@@ -12,10 +12,9 @@
 .chat-modal__content {
     display: flex;
     flex-direction: column;
-    background-color: #fff;
+    background-color: #fdfdfd;
     padding: 25px;
 }
-
 
 .chat-modal__title {
     font-size: 18px;
@@ -54,6 +53,7 @@
 .chat-worker-info {
     display: flex;
     align-items: center;
+    margin-bottom: 5px;
 }
 .worker-avatar {
   width: 30px;
@@ -69,6 +69,8 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    background-color: #fdfdfd;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .message-bubble {
@@ -97,7 +99,8 @@
   align-items: flex-end;
   gap: 8px;
   padding: 10px;
-  background: #f1f1f1;
+  background-color: #fdfdfd;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   border-top: 1px solid #ddd;
 }
 
