--- a/frontend-react/src/App.css
+++ b/frontend-react/src/App.css
@@ -1,4 +1,48 @@
+@font-face {
+  font-family: "Gilroy";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/Gilroy-Regular.woff"),
+        url("/fonts/Gilroy-Regular.ttf");
+}
+@font-face {
+  font-family: "Gilroy";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/Gilroy-Medium.woff"),
+        url("/fonts/Gilroy-Medium.ttf");
+}
+@font-face {
+  font-family: "Gilroy";
+  font-style: normal;
+  font-weight: 600;
+  src: url("/fonts/Gilroy-SemiBold.woff"),
+        url("/fonts/Gilroy-SemiBold.ttf");
+}
+@font-face {
+  font-family: "Gilroy";
+  font-style: normal;
+  font-weight: 700;
+  src: url("/fonts/Gilroy-Bold.woff"),
+        url("/fonts/Gilroy-Bold.ttf");
+}
+@font-face {
+  font-family: "Gilroy";
+  font-style: normal;
+  font-weight: 800;
+  src: url("/fonts/Gilroy-ExtraBold.woff"),
+        url("/fonts/Gilroy-ExtraBold.ttf");
+}
+@font-face {
+  font-family: "Gilroy";
+  font-style: normal;
+  font-weight: 300;
+  src: url("/fonts/Gilroy-Light.woff"),
+        url("/fonts/Gilroy-Light.ttf");
+}
 * {
+  font-family: "Gilroy", sans-serif;
+  font-style: normal;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
