--- a/frontend-react/src/components/ChatModal/ChatModal.css
+++ b/frontend-react/src/components/ChatModal/ChatModal.css
@@ -1,6 +1,5 @@
 .chat-modal {
     width: 400px;
-    font-family: sans-serif;
     background: white;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
@@ -10,19 +9,50 @@
 }
 
 .chat-modal__content {
-    display: flex;
-    flex-direction: column;
-    background-color: #fdfdfd;
-    padding: 25px;
+  background-color: #fdfdfd;
+}
+.chat-modal__inner {
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  background-color: #fdfdfd;
+}
+
+.chat-modal__header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background: linear-gradient(110deg, #E00D2A, #1C69D6);
+  color: #fdfdfd;
+  padding: 15px;
 }
 
 .chat-modal__title {
-    font-size: 18px;
-    text-align: center;
-    margin-bottom: 15px;
+  font-size: 18px;
+  text-align: center;
+}
+
+.close-button {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(110deg, #E00D2A, #1C69D6);
+  position: absolute;
+  color: #fdfdfd;
+  left: -35px;
+  padding: 5px;
+  border: none;
+  border-radius: 50%;
+  font-size: 20px;
+  line-height: 1;
+  cursor: pointer;
 }
 
 .chat-modal__start-button {
+    font-weight: 600;
     padding: 10px 20px;
     background-color: #007bff;
     color: #fff;
@@ -50,6 +80,7 @@
     width: 100%;
     align-items: center;
 }
+
 .chat-worker-info {
     display: flex;
     align-items: center;
@@ -62,15 +93,15 @@
 }
 
 .chat-messages {
-    width: 100%;
-    max-height: 400px;
-    overflow-y: auto;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    background-color: #fdfdfd;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-height: 400px;
+  overflow-y: auto;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #fdfdfd;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .message-bubble {
@@ -119,28 +150,20 @@
 }
 
 .chat-input button {
-    flex-shrink: 0;
-    height: 40px;
-    padding: 6px 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  font-weight: 600;
+  flex-shrink: 0;
+  height: 40px;
+  padding: 6px 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .chat-input button:hover {
   background-color: #0056b3;
 }
 
-.close-button {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 20px;
-    cursor: pointer;
-}
   
