--- a/frontend-react/src/components/UI/Button/Button.module.css
+++ b/frontend-react/src/components/UI/Button/Button.module.css
@@ -3,7 +3,7 @@
     color: white;
     padding: 12px 24px;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 800;
     text-align: center;
     border: 1px solid transparent;
     transition: all 0.3s ease;
