--- a/frontend-react/src/components/UI/Header/Header.css
+++ b/frontend-react/src/components/UI/Header/Header.css
@@ -4,7 +4,6 @@
   z-index: 10;
   background-color: #fff;
   padding: 20px 0;
-  font-family: sans-serif;
 }
 .header__inner {
   display: flex;
@@ -23,7 +22,7 @@
   
   .header__nav a {
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 800;
     color: #777E90;
     transition: all 0.3s ease;
   }
