--- a/frontend-react/src/components/ChatModal/ChatModal.css
+++ b/frontend-react/src/components/ChatModal/ChatModal.css
@@ -82,13 +82,25 @@
 }
 
 .chat-worker-info {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
 }
 .worker-avatar {
   width: 30px;
   height: 30px;
+  margin-right: 10px;
+}
+
+.worker__img {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #B1B5C3;
   margin-right: 10px;
 }
 
