--- a/frontend-react/src/components/DocumentItem/DocumentItem.css
+++ b/frontend-react/src/components/DocumentItem/DocumentItem.css
@@ -24,3 +24,50 @@
     font-size: 16px;
     font-weight: 600;
 }
+
+@media (max-width: 1200px) {
+  .document-item {
+    flex: 0 0 calc((100% - 40px) / 4); /* 4 карточки */
+  }
+}
+
+@media (max-width: 768px) {
+  .document-item {
+    flex: 0 0 calc((100% - 30px) / 3); /* 3 карточки */
+  }
+}
+
+@media (max-width: 480px) {
+  .document-item {
+    flex: 0 0 calc((100% - 20px) / 2); /* 2 карточки */
+  }
+
+  .document-item__preview {
+    padding: 30px 0;
+  }
+
+  .document-item__preview img {
+    width: 70px;
+    height: 80px;
+  }
+
+  .document-item__title {
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 360px) {
+  .document-item {
+    flex: 0 0 60%; /* 1 карточка */
+  }
+  .document-item__preview {
+    padding: 25px 0;
+  }
+  .document-item__preview img {
+    width: 60px;
+    height: 70px;
+  }
+  .document-item__title {
+    font-size: 12px;
+  }
+}
