--- a/frontend-react/src/components/TabSwitcher/TabSwitcher.css
+++ b/frontend-react/src/components/TabSwitcher/TabSwitcher.css
@@ -22,3 +22,21 @@
     font-size: 22px;
     font-weight: 400;
 }
+
+@media (max-width: 768px) {
+  .tab-content__title {
+    font-size: 26px;
+  }
+  .tab-content__description {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 480px) {
+  .tab-content__title {
+    font-size: 22px;
+  }
+  .tab-content__description {
+    font-size: 16px;
+  }
+}
