--- a/frontend-react/src/components/UI/Button/Button.module.css
+++ b/frontend-react/src/components/UI/Button/Button.module.css
@@ -13,3 +13,24 @@
     color: #000;
     border-color: #000;
 }
+
+@media (max-width: 768px) {
+    .Btn {
+        font-size: 16px;
+        padding: 8px 16px;
+    }
+}
+
+@media (max-width: 480px) {
+    .Btn {
+        font-size: 12px;
+        padding: 6px 12px;
+    }
+}
+
+@media (max-width: 320px) {
+    .Btn {
+        font-size: 10px;
+        padding: 4px 8px;
+    }
+}
