--- a/frontend-react/src/components/UI/Header/Header.css
+++ b/frontend-react/src/components/UI/Header/Header.css
@@ -30,5 +30,112 @@
     opacity: 0.5;
   }
   
+.header__buttons {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
 
+.burger {
+  display: none;
+  width: 24px;
+  height: 20px;
+  position: relative;
+  cursor: pointer;
+  z-index: 100;
+  flex-direction: column;
+  justify-content: space-between;
+  -webkit-tap-highlight-color: transparent; 
+  outline: none;
+}
+.burger:focus {
+  outline: none;
+}
+
+.burger span {
+  display: block;
+  height: 3px;
+  background-color: #141416;
+  border-radius: 2px;
+  transition: all 0.2s ease;
+  position: relative;
+}
+
+
+.burger span:nth-child(1) {
+  top: 0;
+}
+
+.burger span:nth-child(2) {
+  top: 0;
+}
+
+.burger span:nth-child(3) {
+  top: 0;
+}
+
+
+.burger.open span:nth-child(1) {
+  transform: rotate(45deg);
+  top: 8px; 
+  position: absolute;
+  width: 24px;
+}
+
+.burger.open span:nth-child(2) {
+  opacity: 0;
+  position: absolute;
+  width: 24px;
+  top: 8px;
+}
+
+.burger.open span:nth-child(3) {
+  transform: rotate(-45deg);
+  top: 8px;
+  position: absolute;
+  width: 24px;
+}
+
+@media (max-width: 768px) {
+  .header__nav {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: white;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 0 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease, padding 0.4s ease;
+    display: flex;
+    visibility: hidden;
+    z-index: 10;
+  }
+
+  .header__nav.open {
+    max-height: 400px;
+    padding: 20px 0;
+    visibility: visible;
+  }
+
+  .burger {
+    display: flex;
+  }
+
+  .header__buttons button {
+    display: none;
+  }
+  .header__logo img {
+    max-height: 2.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .header__logo img {
+    max-height: 2rem;
+  }
+}
   
