--- a/frontend-react/src/components/UI/TabButton/TabButton.css
+++ b/frontend-react/src/components/UI/TabButton/TabButton.css
@@ -21,3 +21,17 @@
   color: var(--btn-color);
   border-color: var(--btn-color);
 }
+
+@media (max-width: 768px) {
+  .tab-button {
+    font-size: 26px;
+    padding: 20px 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .tab-button {
+    font-size: 22px;
+    padding: 15px 0;
+  }
+}
